.provarCaches/00D410000011HE0EAM/objects/rstk__poagrhdr__c.object
<CustomObject>
    <description>poagrhdr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poagrhdr_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp;  rstk__poagrhdr_agreeno__c</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__poagrhdr_agreeno__c + &apos; - (&apos; +  rstk__poagrhdr_vendno__r.Name + &apos;)&apos;</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_remainingamt__c</fullName>
        <formula>rstk__poagrhdr_limit__c - rstk__poagrhdr_pototamt__c</formula>
        <inlineHelpText>PO Agreement Dollars Remaining</inlineHelpText>
        <label>Dollars Remaining</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__poagrhdr_div__r.rstk__sydiv_div__c + &apos; &apos; +  rstk__poagrhdr_orgid__r.rstk__syorg_orgid__c + &apos; &apos; +  rstk__poagrhdr_pohdr__r.rstk__pohdr_ordno__c + &apos; &apos; +  rstk__poagrhdr_buyusrno__r.rstk__syusr_employee__c + &apos; &apos; + rstk__poagrhdr_vendno__r.rstk__povend_vendno__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_agreeno__c</fullName>
        <inlineHelpText>This is the Agreement Number that is used internally, and may be different than the Vendor&apos;s Agreement Number.  It can be a system-generated number of can be set manually, requiring an alpha-character prefix.</inlineHelpText>
        <label>Agreement Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_agreenocustom__c</fullName>
        <inlineHelpText>PO Agreement Number</inlineHelpText>
        <label>Custom Agreement Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_agrsts__c</fullName>
        <inlineHelpText>This represents the current status of the PO Agreement.  Values are Planned (pending), Firmed (active) or Closed.</inlineHelpText>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_apprvid1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>User-input field used to drive the required PO Approvals needed when a PO is associated with this Agreement.</inlineHelpText>
        <label>Approver Level 1</label>
        <referenceTo>rstk__syapprv__c</referenceTo>
        <relationshipName>PO_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_apprvid2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>User-input field used to drive the required PO Approvals needed when a PO is associated with this Agreement.</inlineHelpText>
        <label>Approver Level 2</label>
        <referenceTo>rstk__syapprv__c</referenceTo>
        <relationshipName>PO_Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_apprvid3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>User-input field used to drive the required PO Approvals needed when a PO is associated with this Agreement.</inlineHelpText>
        <label>Approver Level 3</label>
        <referenceTo>rstk__syapprv__c</referenceTo>
        <relationshipName>PO_Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_autoassignedagreeno__c</fullName>
        <inlineHelpText>This is the automatically assigned Agreement Number</inlineHelpText>
        <label>Auto-assigned Agree No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_blanketagrind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that all goods and services provided by the Agreement Vendor are covered by the one agreement. There can only be one Blanket Agreement for a given Vendor.</inlineHelpText>
        <label>Blanket Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_buyusrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Buyer that is specifically responsible for this Agreement. This defaults to the Buyer responsible for the given Vendor but can be overwritten.</inlineHelpText>
        <label>Responsible Buyer</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>POAGRHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_descr__c</fullName>
        <inlineHelpText>This is the description for this particular agreement. It is not required but is recommended to be used to describe the nature of the Agreement (limited to 50 characters).</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Identifies the specific Division that this record is associated with. Div is the core organizational unit, which is typically the plant where the manufacturing is performed, as well as the receipt of purchased material, and fulfillment of sales orders.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divpoagrhdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_exchangerate__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This is the exchange rate at the time the Vendor and Buyer negotiated the agreement for which the amounts and prices established are based on.</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_homecurr__c</fullName>
        <inlineHelpText>This denotes the Currency of the Rootstock Company (as opposed to the Vendor&apos;s currency).</inlineHelpText>
        <label>Home Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_indmtlind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When the checkbox is checked, it indicates that the Agreement can be used for Indirect Material. Field is disabled for Blanket Agreemenst (that cover all types of material) or when the Vendor record does not have the Indirect Material checkbox checked.</inlineHelpText>
        <label>Indirect Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_limit__c</fullName>
        <inlineHelpText>This is the dollar limit of the Agreement in the Home Currency.</inlineHelpText>
        <label>Agreement Amount Limit</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_limitvcurr__c</fullName>
        <inlineHelpText>This is the dollar limit of the Agreement in the Vendor&apos;s currency.  If the total PO amounts are greater than this limit, then the Approvers will need to Approve the revisions of all purchase orders.</inlineHelpText>
        <label>Agreement Amount Limit (Vendor Currency)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_maintcurr__c</fullName>
        <inlineHelpText>This is the maintenance currency for this Agreement</inlineHelpText>
        <label>Maintenance Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_orgid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Denotes the Group used to determine approvals required.</inlineHelpText>
        <label>Group</label>
        <referenceTo>rstk__syorg__c</referenceTo>
        <relationshipName>POAGRHDRs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_outsideopsind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When the checkbox is checked, it indicates that the Agreement can be used for Outside Operations. Field is disabled for Blanket Agreemenst (that cover all types of material) or when the Vendor record does not have the Direct Material checkbox checked.</inlineHelpText>
        <label>Outside Operations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_ovrlv2apprvind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checkbox is checked, the Purchase Order Level 2 Approvers are not required to approve any POs associated with this agreement.</inlineHelpText>
        <label>Approval Override (Level 2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_ovrlvl1apprvind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checkbox is checked, the Purchase Order Level 1 Approvers are not required to approve any POs associated with this agreement.</inlineHelpText>
        <label>Approval Override (Level 1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_poamtapprv__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total amount on POs associated with this Agreement that have been approved. Value is in the Home currency.</inlineHelpText>
        <label>Total Amount Approved</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_poamtapprvvcurr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total amount on POs associated with this Agreement that have been approved.  Value is in the Vendor&apos;s currency.</inlineHelpText>
        <label>Total Amount Approved (Vendor Currency)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_poamtunapprv__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total amount on POs associated with this Agreement that have yet to be approved. Value is in the Vendor&apos;s currency.</inlineHelpText>
        <label>Pending Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_poamtunapprvvcurr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total amount on POs associated with this Agreement that have yet to be approved. Value is in the Vendor&apos;s currency.</inlineHelpText>
        <label>Pending Amount (Vendor Currency)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_pohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Purchase Order Number for this Agreement</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>PO Agreement Header</relationshipLabel>
        <relationshipName>POAGRHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_pototamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total amount on POs associated with this Agreement that are either unapproved or approved. Value is in the Home currency.</inlineHelpText>
        <label>Total PO Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_pototamtvcurr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total amount on POs associated with this Agreement that are either unapproved or approved. Value is in the Vendor&apos;s currency.</inlineHelpText>
        <label>Total PO Amount (Vendor Currency)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_purdirmtlind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When the checkbox is checked, it indicates that the Agreement can be used for Direct Material. Field is disabled for Blanket Agreemenst (that cover all types of material) or when the Vendor record does not have the Direct Material checkbox checked.</inlineHelpText>
        <label>Direct Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_requestorg__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Requesting Organization for this Agreement</inlineHelpText>
        <label>Requesting Organization</label>
        <referenceTo>rstk__syorg__c</referenceTo>
        <relationshipName>POAGRHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_serviceind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When the checkbox is checked, it indicates that the Agreement can be used for Service Items. Field is disabled for Blanket Agreemenst (that cover all types of material) or when the Vendor record does not have the Service checkbox checked.</inlineHelpText>
        <label>Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_subdirmtlind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When the checkbox is checked, it indicates that the Agreement can be used for Subcontract Items. Field is disabled for Blanket Agreemenst (that cover all types of material) or when the Vendor record does not have the Direct Material checkbox checked.</inlineHelpText>
        <label>Subcontact Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_temp_select__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PO Agreement UI Temporary field</inlineHelpText>
        <label>Temp Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_vendagrno__c</fullName>
        <inlineHelpText>Denotes the Vendor&apos;s Agreement Number, which may be different that the internal Agreement Number.</inlineHelpText>
        <label>Vendor’s Agreement Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_vendcurr__c</fullName>
        <inlineHelpText>This is the Vendor&apos;s currency and is set from the Vendor record.</inlineHelpText>
        <label>Vendor Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poagrhdr_vendno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This denotes the Vendor Number associated with the Agreement&apos;s Vendor.</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipName>POAGRHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <listViews>
        <fullName>rstk__All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_PO_Agreement_Header</fullName>
        <columns>NAME</columns>
        <columns>rstk__poagrhdr_div__c</columns>
        <columns>rstk__poagrhdr_vendno__c</columns>
        <columns>rstk__poagrhdr_agreeno__c</columns>
        <columns>rstk__poagrhdr_limit__c</columns>
        <columns>rstk__poagrhdr_agrsts__c</columns>
        <columns>rstk__poagrhdr_agreenocustom__c</columns>
        <columns>rstk__poagrhdr_descr__c</columns>
        <columns>rstk__poagrhdr_orgid__c</columns>
        <columns>rstk__poagrhdr_purdirmtlind__c</columns>
        <columns>rstk__poagrhdr_indmtlind__c</columns>
        <columns>rstk__formula_remainingamt__c</columns>
        <columns>rstk__poagrhdr_pototamt__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>PO Agreement Header</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>POAGRHDR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Agreement Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>